# UML-State-Machine-in-C

./: .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  fsm_unitTest_MinGW.bat  fsm_unitTest_vs2019.bat  hsm_unitTest_MinGW.bat  hsm_unitTest_vs2019.bat  todo.txt
CMake/: hsm_config.h.in
bat files/: fsm_unitTest_MinGW.bat  fsm_unitTest_vs2019.bat  hsm_unitTest_MinGW.bat  simple_state_machine_demo_MinGW.bat
bat_files/: fsm_unitTest_MinGW.bat  hsm_unitTest_MinGW.bat  hsm_unitTest_vs2019.bat  simple_state_machine_enhanced_demo_MinGW.bat
demo/: CMakeLists.txt
demo/hierarchical_state_machine/: CMakeLists.txt  readme.md
demo/hierarchical_state_machine/src/: demo.c  demo.h  main.c
demo/simple_state_machine/: CMakeLists.txt  readme.md
demo/simple_state_machine/src/: demo_process.c  demo_process.h  finite_state_machine.c  finite_state_machine.h  main.c  process.c  process.h
demo/simple_state_machine_enhanced/: CMakeLists.txt  readme.md
demo/simple_state_machine_enhanced/src/: demo_process.c  finite_state_machine.c  finite_state_machine.h  main.c  process.c
demo/toaster_oven/: CMakeLists.txt  readme.md
demo/toaster_oven/src/: main.c  toaster_oven.c  toaster_oven.h
examples/finite_state_machine/src/: finite_state_machine.c  finite_state_machine.h  main.c
src/: hsm.c  hsm.h
test/: CMakeLists.txt
test/CMake/: hsm_config.h.in
test/fsm_test/: CMakeLists.txt
test/hsm_test/: CMakeLists.txt
test/src/: gmock-global.h
test/src/case/: hierarchical_state_transition.cpp  hierarchical_state_transition.txt  hierarchical_test.cpp  priority_test.cpp  simple_test.cpp  state_transition.cpp
test/src/cases/: hierarchical_state_transition.cpp  hierarchical_test.cpp  priority_test.cpp  simple_test.cpp  state_transition.cpp
